# catchido

./: .gitignore  README.md  catchido-web.bat  config.example.toml  pyproject.toml
.agents/: AGENTS.md
.agents/skills/catchido_guide/: SKILL.md
.agents/skills/committing-changes/: SKILL.md
.agents/skills/designing-architecture/: SKILL.md
.agents/skills/emil_design_eng/: SKILL.md
.agents/skills/engineering-philosophy/: SKILL.md
.agents/skills/implementing-blocks/: SKILL.md
.agents/skills/python-conventions/: SKILL.md
.agents/skills/reviewing-changes/: SKILL.md
.agents/skills/reviewing-changes/reference/: ai-native-rubric.md
.agents/skills/reviewing-changes/reference/ai-native-templates/: ai-practices.yml  check-ai-practices.sh
.agents/skills/running-tdd-cycles/: SKILL.md
docs/: PRD.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  db.rs  downloader.rs  lib.rs
src-tauri/src/scrapers/: instagram.rs  mod.rs  threads.rs  tiktok.rs  twitter.rs  weibo.rs
src/catchido/: __init__.py  cli.py  config.py
src/catchido/core/: dedup.py  downloader.py  orchestrator.py  organizer.py
src/catchido/db/: models.py  repository.py
src/catchido/keywords/: expander.py  resolver.py  scorer.py
src/catchido/scrapers/: base.py  instagram.py  threads.py  tiktok.py  twitter.py  weibo.py
src/catchido/tui/: __init__.py  app.py  catchido.tcss
src/catchido/tui/screens/: __init__.py  dashboard.py  download.py  idol_detail.py  idol_list.py  settings.py
src/catchido/tui/widgets/: __init__.py  idol_card.py  platform_badge.py  stats_panel.py
src/catchido/utils/: helpers.py  logger.py
src/catchido/web/: __init__.py  server.py
src/catchido/web/static/: app.js  index.html  style.css
tests/: test_database.py  test_dedup.py  test_helpers.py  test_scorer.py
